【优化】代码整理